# bromo

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  LICENSE  bromo  bromo.bat  config.html  index.html  introduction.html  mvnw  mvnw.cmd  pom.xml  print.html  searchindex.js  searchindex.json
.github/workflows/: build.yml  docs.yml
bench/baselines/: completion.member-string-le.json  completion.prefix-Pie.json  definition.bromo-main.json  diagnostics.compile-bromo-cached.json  didchange.piece-table-random-insert.json  didchange.piece-table-sequential-append.json  hover.bromo-main.json  project-load.bromo.json  symbol-index.lookup-Pie.json  symbol-index.scan-bromo.json
crates/config/: Cargo.toml
crates/parser/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md
src/main/java/com/almato/bromo/: Main.java
src/main/java/com/almato/bromo/compiler/: Diagnostic.java  DiagnosticSeverity.java  EcjContext.java  LibrarySourceProvider.java  ProblemBridge.java  ResolvedDeclaration.java  SourceResolver.java  package-info.java
src/main/java/com/almato/bromo/features/: CompletionFeature.java  CompletionItem.java  CompletionItemKind.java  CompletionResult.java  DefinitionFeature.java  DefinitionResult.java  HoverFeature.java  HoverResult.java  MemberCompletionResolver.java  package-info.java
src/main/java/com/almato/bromo/jdk/: JdkProvider.java  package-info.java
src/main/java/com/almato/bromo/lsp/: Adapters.java  BromoLanguageServer.java  BromoTextDocumentService.java  BromoWorkspaceService.java  Progress.java  package-info.java
src/main/java/com/almato/bromo/project/: ClasspathEntry.java  ProjectModel.java  ProjectModelProvider.java  package-info.java
src/main/java/com/almato/bromo/query/: QueryEngine.java  package-info.java
src/main/java/com/almato/bromo/symbol/: Descriptor.java  SignatureExtractor.java  SymbolEntry.java  SymbolIndex.java  SymbolKind.java  WorkspaceScanner.java  package-info.java
src/main/java/com/almato/bromo/util/: Cancel.java  CancelToken.java  Logging.java  package-info.java
src/main/java/com/almato/bromo/wire/: Stdio.java  package-info.java
src/main/java/com/almato/bromo/workspace/: Document.java  FileStore.java  MmapBuffer.java  PieceTable.java  Positions.java  Revision.java  Uris.java  Workspace.java  package-info.java
src/main/java/me/moamenhredeen/bromo/: Main.java
src/main/java/me/moamenhredeen/bromo/compiler/: Diagnostic.java  DiagnosticSeverity.java  EcjContext.java  LibrarySourceProvider.java  ProblemBridge.java  ResolvedDeclaration.java  (+2 more)
(+134 files in other folders)
